# mtbcreditcard

./: .gitignore  CALENDAR_TEST_GUIDE.md  FINAL_IMPLEMENTATION_REPORT.md  FORM_STEP_ENHANCEMENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  QUICK_TEST_CHECKLIST.md  TESTING_CHECKLIST.md  TESTING_DOCUMENTATION.md  index.html  load_test.py  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.claude/: settings.local.json
.cursor/: project_scope.md  rules.md
backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/: __init__.py  applications.py  auth.py  dashboard.py  drafts.py  landing.py  reference.py  session.py  submission.py
backend/app/api/models/: __init__.py  application.py  auth.py  base.py  draft.py  session.py
backend/app/api/steps/: __init__.py  auto_debit.py  bank_accounts.py  card_selection.py  credit_facilities.py  declarations.py  documents.py  monthly_income.py  nominee.py  personal_info.py  professional_info.py  references.py  supplementary.py
backend/app/database/: __init__.py  connection.py  models.py  procedures.py
backend/app/security/: __init__.py  dependencies.py  jwt.py  middleware.py  password.py
backend/app/utils/: __init__.py  json.py  validation.py
backend/docs/: API.md  DEPLOYMENT.md  DEVELOPMENT.md  NEW_ENDPOINTS_ADDED.md
backend/tests/: ENDPOINT_TEST_REPORT.md  __init__.py  conftest.py  test_api.py  test_auth.py  verify_new_endpoints.py  verify_syntax.py
database/: PROCEDURES_CREATED.md  (+4 more)
(+161 files in other folders)
